stack/deployment-cachet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cachet
  labels:
    app: cachet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cachet
  template:
    metadata:
      labels:
        app: cachet
    spec:
      nodeSelector:
        dfl.mn/datacentre: digitalocean
      containers:
        - name: cachet
          image: cachethq/docker:latest
          ports:
          - containerPort: 8000
