stack/deployment-dflmon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dflmon
  labels:
    app: dflmon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dflmon
  template:
    metadata:
      labels:
        app: dflmon
    spec:
      nodeSelector:
        dfl.mn/datacentre: digitalocean
      volumes:
      - name: configmap-dflmon
        configMap:
          name: configmap-dflmon
      containers:
        - name: dflmon
          image: duffleman/dflmon:latest
          volumeMounts:
          - name: configmap-dflmon
            mountPath: /dflmon_config
