stack/deployment-wallabag.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  labels:
    app: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      nodeSelector:
        dfl.mn/datacentre: digitalocean
      containers:
        - name: wallabag
          image: wallabag/wallabag:latest
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: "/var/www/wallabag/data"
            name: wallabag-data
          - mountPath: "/var/www/wallabag/web/assets/images"
            name: wallabag-images
      volumes:
        - name: wallabag-data
          persistentVolumeClaim:
            claimName: wallabag-data
        - name: wallabag-images
          persistentVolumeClaim:
            claimName: wallabag-images
