stack/pv-access.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-access
  labels:
    app: pv-access
spec:
  containers:
    - name: pv-access
      image: linuxserver/openssh-server:latest
      volumeMounts:
      - mountPath: "/heimdall"
        name: heimdall
      - mountPath: "/wallabag/data"
        name: wallabag-data
      - mountPath: "/wallabag/images"
        name: wallabag-images
  volumes:
    - name: heimdall
      persistentVolumeClaim:
        claimName: heimdall
    - name: wallabag-images
      persistentVolumeClaim:
        claimName: wallabag-images
    - name: wallabag-data
      persistentVolumeClaim:
        claimName: wallabag-data
  restartPolicy: Never
