stack/sandbox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sandbox
spec:
  containers:
    - name: sandbox
      image: ubuntu
      command: ["/bin/bash", "-ec", "while :; do echo '.'; sleep 5 ; done"]
  restartPolicy: Never
