stack/service-heimdall.yaml
kind: Service
apiVersion: v1
metadata:
  name: heimdall
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
      app: heimdall
