stack/service-redis-cachet.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-cachet
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
      app: redis-cachet
