stack/service-redis-wallabag.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-wallabag
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
      app: redis-wallabag
