stack/ingress-cachet.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-cachet
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: issuer-cert-manager-production
    certmanager.k8s.io/cluster-issuer: issuer-cert-manager-production
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - status.dfl.mn
    secretName: cert-cachet
  rules:
  - host: status.dfl.mn
    http:
      paths:
      - path: /
        backend:
          serviceName: cachet
          servicePort: 8000
